--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,9 +3,13 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   font-weight: normal;
   height: 100vh;
+}
+
+#app .container1 {
+  display: flex; flex-direction: column; justify-content: center; padding: 2em 0;
 }
 
 a,
@@ -32,6 +36,6 @@ a,
   #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    /* padding: 0 2rem; */
   }
 }
